--- a/subgraphs/erc20approve/package.json
+++ b/subgraphs/erc20approve/package.json
@@ -6,8 +6,10 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "preparePolygon": "mustache ../../config/matic.json subgraph.template.yaml > subgraph.yaml && graph codegen",
+    "prepareSodiumt": "mustache ../../config/sodiumt.json subgraph.template.yaml > subgraph.yaml && graph codegen",
     "prepareMumbai": "mustache ../../config/mumbai.json subgraph.template.yaml > subgraph.yaml && graph codegen",
     "deployMumbai": "graph deploy alberthuang24/sodium80001erc20approve --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploySodiumt": "graph create --node http://localhost:8020 alberthuang24/sodium80001erc20approve && graph deploy -l $version alberthuang24/sodium80001erc20approve --ipfs http://127.0.0.1:5002 --node http://localhost:8020",
     "deployPolygon": "graph deploy alberthuang24/sodium137erc20approve --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/"
   },
   "author": "sodiumlabs",
